force-app/main/default/objects/User/fields/BusinessUnitPick__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitPick__c</fullName>
    <inlineHelpText>To which business unit does this user belongs?</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessUnits</valueSetName>
    </valueSet>
</CustomField>