force-app/main/default/objects/User/fields/FullNameForm__c.field-meta.xml
<CustomField>
    <fullName>FullNameForm__c</fullName>
    <description>Formula to retrieve the full name of a user. Used in flows, emails etc.</description>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>