force-app/main/default/objects/User/fields/ManagerFullName__c.field-meta.xml
<CustomField>
    <fullName>ManagerFullName__c</fullName>
    <description>Formula field created to retrieve the full name of the manager. Used in f.e. flows.</description>
    <formula>Manager.FullNameForm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Full Name</label>
    <type>Text</type>
</CustomField>