force-app/main/default/objects/User/fields/RoleDeveloperNameForm__c.field-meta.xml
<CustomField>
    <fullName>RoleDeveloperNameForm__c</fullName>
    <description>Formula field created to use the role developer name in flows.</description>
    <formula>UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Developer Name</label>
    <type>Text</type>
</CustomField>